[package]
name = "brightdata_proxy"
description = "A simple helper library which helps you set up a brightdata proxy which you can use with the reqwest library"
license = "MIT"
authors = ["Jeroen Vervaeke <crates.contact.6yqd3@8alias.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jeroenvervaeke/brightdata-proxy"

[dependencies]
reqwest = { workspace = true }
typed-builder = "0.18.2"
uuid = { version = "1.8.0", features = ["v4"] }

[workspace]
members = ["examples/*"]

[workspace.dependencies]
reqwest = "0.12.4"
